@@ -3,13 +3,13 @@
 ## Product Overview
 
 **Product Name:** EtherWave Archive
-**Version:** 1.0.0
+**Version:** 1.2.0
 **Platform:** Web Application (Angular + Spring Boot)
-**Domain:** Amateur Radio (Ham Radio) Logging and Mapping System
+**Domain:** Amateur Radio (Ham Radio) Logging, Mapping, and Contest System
 **Theme:** Signal Analysis / Sci-Fi Aesthetic
 
 ### Product Vision
-EtherWave Archive is a modern, multi-station amateur radio logging system that provides comprehensive QSO (radio contact) management with advanced geographic visualization, real-time updates, and intelligent data analysis. The system supports multiple concurrent radio stations with sophisticated mapping capabilities for tracking global communications.
+EtherWave Archive is a modern, multi-station amateur radio logging system providing comprehensive QSO management with advanced geographic visualization, real-time updates, contest validation and scoring, rig control integration, and multi-user collaboration. The system supports multiple concurrent operators with role-based access control, seven contest validators, and a plugin-based architecture for contest extensibility.
 
 ---
 
@@ -17,6 +17,8 @@ EtherWave Archive is a modern, multi-station amateur radio logging system that p
 
 ### Epic Description
 As a radio operator, I need a robust logging system to record, manage, and search my radio contacts across multiple stations and operating modes.
+
+**Status: Complete**
 
 ### User Stories
 
@@ -26,18 +28,19 @@ As a radio operator, I need a robust logging system to record, manage, and searc
 **So that** I can keep my station operations organized and track performance individually
 
 **Acceptance Criteria:**
--  System supports unlimited logs per user
--  Each log has unique identifier and metadata (name, description, callsign)
--  Logs can be created, edited, and deleted
--  Station-specific configuration (station ID 1-6 supported)
--  Access control: only log creator can view/edit their logs in shared mode
+- [x] System supports unlimited logs per user
+- [x] Each log has a unique identifier and metadata (name, description, callsign)
+- [x] Logs can be created, edited, and soft-deleted
+- [x] Station-specific configuration (stations numbered 1-10 plus GOTA designation)
+- [x] Access control enforced: CREATOR / STATION / VIEWER roles per log
+- [x] LogType enum (PERSONAL / SHARED) enforced at backend
 
 **Technical Implementation:**
-- Entity: `Log` (JPA)
-- Repository: `LogRepository` with CRUD operations
-- Service: `LogService` with business logic
+- Entity: `Log` (JPA) with `LogType` enum and `bonusMetadata` TEXT column
+- Repository: `LogRepository` with CRUD and soft-delete
+- Service: `LogService` with business logic and role resolution
 - Controller: `LogController` with REST endpoints
-- Frontend: Angular service + component for log management
+- Frontend: Angular `LogService` + log-selector component
 
 ---
 
@@ -47,40 +50,41 @@ As a radio operator, I need a robust logging system to record, manage, and searc
 **So that** I can maintain accurate records for awards and statistics
 
 **Acceptance Criteria:**
--  Capture essential QSO fields: callsign, frequency/band, mode, date/time, RST
--  Optional fields: operator name, QTH, grid square, notes, exchange data
--  Support for 9+ bands (160M to 70CM)
--  Support for 8+ modes (SSB, CW, FT8, FT4, RTTY, PSK31, FM, AM)
--  Real-time validation of callsigns and grid squares
--  Quick entry mode for contest logging
--  Edit and delete capabilities with confirmation
+- [x] Capture essential QSO fields: callsign, frequency/band, mode, date/time, RST
+- [x] 25+ fields including operator name, QTH, grid square, notes, and contest exchange data
+- [x] Support for 9+ bands (160M to 70CM)
+- [x] Support for 8+ modes (SSB, CW, FT8, FT4, RTTY, PSK31, FM, AM)
+- [x] Real-time callsign and grid square validation
+- [x] Auto-population of QSO form from rig control data
+- [x] Edit and delete capabilities with confirmation
 
 **Technical Implementation:**
 - Entity: `QSO` (JPA) with 25+ fields
 - Repository: `QSORepository` with pagination and filtering
 - Service: `QSOService` with validation logic
 - Controller: `QSOController` with REST endpoints
-- Frontend: Reactive forms with validation
+- Frontend: Reactive forms with validation, rig data binding
 
 ---
 
-#### US-1.3: ADIF Import/Export
+#### US-1.3: ADIF Import/Export and Cabrillo Export
 **As a** radio operator
-**I want to** import and export logs in ADIF format
-**So that** I can migrate data between logging applications
+**I want to** import and export logs in standard formats
+**So that** I can migrate data between logging applications and submit contest entries
 
 **Acceptance Criteria:**
--  Import ADIF 3.1.4 files
--  Export logs to ADIF 3.1.4 format
--  Parse all standard ADIF fields
--  Handle custom/vendor-specific fields gracefully
--  Validate data integrity during import
--  Report import statistics (success/failure counts)
+- [x] Import ADIF 3.1.4 files
+- [x] Export logs to ADIF 3.1.4 format
+- [x] Cabrillo export for contest submission
+- [x] Parse all standard ADIF fields
+- [x] Handle custom/vendor-specific fields gracefully
+- [x] Validate data integrity during import
+- [x] Report import statistics (success/failure counts)
 
 **Technical Implementation:**
 - Service: `ADIFService` with parser and generator
+- Service: `CabrilloExportService`
 - Support for `.adi` and `.adif` file extensions
-- XML-safe character escaping
 - Batch processing for large files
 
 ---
@@ -90,6 +94,8 @@ As a radio operator, I need a robust logging system to record, manage, and searc
 ### Epic Description
 As a radio operator, I need advanced mapping capabilities to visualize my contacts geographically, track grid square coverage, and analyze propagation patterns with interactive overlays and real-time updates.
 
+**Status: Complete**
+
 ### User Stories
 
 #### US-2.1: Interactive QSO Map
@@ -98,65 +104,45 @@ As a radio operator, I need advanced mapping capabilities to visualize my contac
 **So that** I can visualize my global communications and identify coverage gaps
 
 **Acceptance Criteria:**
--  Interactive Leaflet.js map with pan and zoom
--  QSO markers showing contact locations
--  Adaptive server-side clustering (>10,000 QSO threshold)
--  Click markers to view QSO details
--  Color-coded by station (6 distinct colors)
--  Dark/light theme tile layers (CartoDB)
--  Center map on user location by default
--  Empty state when no location data available
+- [x] Interactive Leaflet.js map with pan and zoom
+- [x] QSO markers showing contact locations
+- [x] Adaptive server-side clustering (10,000 QSO threshold)
+- [x] Click markers to view QSO details
+- [x] Color-coded by station (up to 10 stations plus GOTA)
+- [x] Dark/light theme tile layers (CartoDB)
+- [x] Center map on user location by default
+- [x] Empty state when no location data available
+- [x] `FullscreenMapViewComponent` subscribes to `LogService.currentLog$`, passes `[logId]` and `[filters]` to `<app-qso-map>`
 
 **Technical Implementation:**
-- Backend: `MapDataService`, `QSOLocation` entity
-- Frontend: `QSOMapComponent` (786 LOC)
+- Backend: `MapDataService`, `MapController`
+- Frontend: `QSOMapComponent`, `FullscreenMapViewComponent`
 - Library: Leaflet 1.9.4
 - Tile Layers: CartoDB Positron (light) / Dark Matter (dark)
 - Clustering: Haversine distance calculation
 - API: `GET /api/maps/qsos/{logId}?zoom={zoom}`
-
-**Definition of Done:**
-- Map renders with QSO markers
-- Clustering activates at appropriate zoom levels
-- Theme switching works correctly
-- Performance <2s load time for 10k QSOs
 
 ---
 
 #### US-2.2: Maidenhead Grid Square Overlay
 **As a** radio operator working on grid square awards
 **I want to** see Maidenhead grid squares overlaid on the map
-**So that** I can track which grids I've worked and identify needed grids
+**So that** I can track which grids I have worked and identify needed grids
 
 **Acceptance Criteria:**
--  Toggle grid square overlay on/off
--  Support 4 precision levels: Field (2-char), Square (4-char), Subsquare (6-char), Extended (8-char)
--  Color-coded grid squares based on activity (5 levels: blue → green)
--  Show worked grids with QSO counts
--  Show neighboring unworked grids
--  Interactive popups with grid statistics
--  Grid precision selector in UI
-
-**Color Scheme:**
-- 50+ QSOs: #00ff88 (Green - very active)
-- 20-49 QSOs: #00d4ff (Cyan - active)
-- 10-19 QSOs: #0080ff (Blue - moderate)
-- 5-9 QSOs: #4da6ff (Light blue - some activity)
-- 1-4 QSOs: #80bfff (Very light blue - minimal)
-- 0 QSOs: #999999 (Gray - unworked)
+- [x] Toggle grid square overlay on/off
+- [x] Support 4 precision levels: Field (2-char), Square (4-char), Subsquare (6-char), Extended (8-char)
+- [x] Color-coded grid squares based on activity level
+- [x] Show worked grids with QSO counts
+- [x] Interactive popups with grid statistics
+- [x] Grid precision selector in UI
+- [x] Grid coverage endpoint correctly passes filters to `GridCoverageService`
 
 **Technical Implementation:**
 - Backend: `GridCoverageService`, `MaidenheadConverter`
-- Frontend: `GridOverlayService` (272 LOC)
+- Frontend: `GridOverlayService`
 - Algorithm: Maidenhead locator to lat/lon conversion
-- Grid sizes: 10°×20° (field) to 0.004°×0.008° (extended)
 - API: `GET /api/maps/grids/{logId}?precision={2|4|6|8}`
-
-**Acceptance Criteria Verification:**
-- [ ] Grid overlay toggles without page refresh
-- [ ] Precision changes update grid display
-- [ ] Popups show accurate statistics
-- [ ] Neighboring grids render within viewport
 
 ---
 
@@ -166,24 +152,18 @@ As a radio operator, I need advanced mapping capabilities to visualize my contac
 **So that** I can identify areas of high activity and propagation corridors
 
 **Acceptance Criteria:**
--  Toggle heatmap overlay on/off
--  Adjustable radius (10-50px slider)
--  Real-time radius adjustment without reload
--  Multiple gradient themes (default, warm, cool, monochrome)
--  EtherWave theme gradient (blue → cyan → green → orange → pink)
--  Intensity based on QSO count per location
+- [x] Toggle heatmap overlay on/off
+- [x] Adjustable radius (10-50px slider)
+- [x] Real-time radius adjustment without reload
+- [x] Multiple gradient themes (default, warm, cool, monochrome)
+- [x] EtherWave theme gradient (blue to cyan to green to orange to pink)
+- [x] Intensity based on QSO count per location
 
 **Technical Implementation:**
 - Backend: `HeatmapService` with point aggregation
-- Frontend: `HeatmapService` (195 LOC)
+- Frontend: `HeatmapService`
 - Library: leaflet.heat plugin
 - API: `GET /api/maps/heatmap/{logId}`
-
-**Definition of Done:**
-- Heatmap renders smoothly
-- Radius adjustment updates in real-time
-- Multiple overlays work together
-- Performance maintained with 10k+ points
 
 ---
 
@@ -193,21 +173,12 @@ As a radio operator, I need advanced mapping capabilities to visualize my contac
 **So that** I can visualize which stations contributed to each cluster
 
 **Acceptance Criteria:**
--  Clusters with multiple stations display as pie charts
--  Each slice color-coded by station (6 colors)
--  Center count badge shows total QSOs
--  Slices sorted by count (largest first)
--  Single-station clusters show solid color
--  Hover effects on pie chart markers
--  SVG-generated charts for crisp rendering
-
-**Station Colors:**
-1. #0080ff (Blue)
-2. #00d4ff (Cyan)
-3. #00ff88 (Green)
-4. #ffaa00 (Orange)
-5. #ff0088 (Pink)
-6. #aa00ff (Purple)
+- [x] Clusters with multiple stations displayed as SVG pie charts
+- [x] Each slice color-coded by station
+- [x] Center count badge shows total QSOs
+- [x] Slices sorted by count (largest first)
+- [x] Single-station clusters show solid color
+- [x] SVG-generated charts for crisp rendering
 
 **Technical Implementation:**
 - Component: `QSOMapComponent.createPieChartSVG()`
@@ -216,17 +187,17 @@ As a radio operator, I need advanced mapping capabilities to visualize my contac
 
 ---
 
-#### US-2.5: Recent QSO Animations
+#### US-2.5: Recent QSO Pulse Animations
 **As a** radio operator
 **I want to** see visual animations on recently logged QSOs
 **So that** I can quickly identify new contacts on the map
 
 **Acceptance Criteria:**
--  QSOs within last 15 minutes show pulse animation
--  Expanding blue ring effect (2-second cycle)
--  Infinite loop while QSO remains recent
--  Timestamp-based automatic detection
--  Animation syncs with real-time updates
+- [x] QSOs within last 15 minutes show pulse animation
+- [x] Expanding ring effect (2-second cycle)
+- [x] Infinite loop while QSO remains recent
+- [x] Timestamp-based automatic detection
+- [x] Animation syncs with real-time WebSocket updates
 
 **Technical Implementation:**
 - CSS: `@keyframes pulse` animation
@@ -241,18 +212,18 @@ As a radio operator, I need advanced mapping capabilities to visualize my contac
 **So that** I can track multipliers and identify needed entities
 
 **Acceptance Criteria:**
--  CQ Zones (40 zones worldwide)
--  ITU Zones (90 zones worldwide)
--  ARRL Sections (83 US/Canada sections)
--  DXCC Entities (340+ countries/territories)
--  Dropdown menu with checkboxes for each overlay
--  Color-coded: worked (green/blue/cyan) vs. needed (red/orange/purple)
--  Interactive popups with zone/section details
--  Toggle individual overlays independently
+- [x] CQ Zones (40 zones worldwide)
+- [x] ITU Zones (90 zones worldwide)
+- [x] ARRL Sections (83 US/Canada sections)
+- [x] DXCC Entities (340+ countries/territories)
+- [x] Dropdown menu with toggles for each overlay
+- [x] Color-coded: worked vs. needed
+- [x] Interactive popups with zone/section details
+- [x] `FullscreenMapViewComponent` wires overlay changes to `QSOMapComponent.toggleContestOverlay()`
 
 **Technical Implementation:**
-- Backend: `ContestOverlayService` with zone databases
-- Frontend: `ContestOverlayService` (330 LOC)
+- Backend: `ContestOverlayService`
+- Frontend: `ContestOverlayService`
 - Data: CTY.DAT file parsing for DXCC
 - API Endpoints:
   - `GET /api/maps/overlays/cq-zones/{logId}`
@@ -268,23 +239,21 @@ As a radio operator, I need advanced mapping capabilities to visualize my contac
 **So that** I can use my data in other GIS and mapping tools
 
 **Acceptance Criteria:**
--  Export formats: GeoJSON, KML, CSV, ADIF
--  Modal dialog with format selection
--  Format descriptions and icons
--  Apply current filters to export
--  Automatic file download
--  Proper MIME types and file extensions
--  Loading state during export
+- [x] Export formats: GeoJSON, KML, CSV, ADIF
+- [x] Modal dialog with format selection
+- [x] Apply current filters to export
+- [x] Automatic file download with correct MIME types
+- [x] Loading state during export
 
 **Export Formats:**
-- **GeoJSON**: Geographic data for GIS tools (application/geo+json)
-- **KML**: Google Earth compatible (application/vnd.google-earth.kml+xml)
-- **CSV**: Spreadsheet with location data (text/csv)
-- **ADIF**: Ham radio standard with coordinates (text/plain)
+- **GeoJSON**: Geographic data for GIS tools (`application/geo+json`)
+- **KML**: Google Earth compatible (`application/vnd.google-earth.kml+xml`)
+- **CSV**: Spreadsheet with location data (`text/csv`)
+- **ADIF**: Ham radio standard with coordinates (`text/plain`)
 
 **Technical Implementation:**
 - Backend: `MapExportService` with format converters
-- Frontend: `MapExportDialogComponent` (97 LOC)
+- Frontend: `MapExportDialogComponent`
 - API: `POST /api/maps/export/{logId}?format={format}`
 - Blob download with `URL.createObjectURL()`
 
@@ -293,23 +262,22 @@ As a radio operator, I need advanced mapping capabilities to visualize my contac
 #### US-2.8: Real-Time Map Updates
 **As a** radio operator during active operations
 **I want to** see new QSOs appear on the map in real-time
-**So that** I don't need to manually refresh to see current activity
+**So that** I do not need to manually refresh to see current activity
 
 **Acceptance Criteria:**
--  WebSocket connection to backend
--  Automatic marker addition for new QSOs
--  Filter incoming QSOs by current filters
--  Cluster recalculation in clustered mode
--  Toggle button to enable/disable real-time updates
--  Visual indicator (green=enabled, gray=disabled)
--  Console notifications for debugging
+- [x] WebSocket/STOMP connection to backend
+- [x] Automatic marker addition for new QSOs
+- [x] Incoming QSOs filtered by current filter state
+- [x] Cluster recalculation in clustered mode
+- [x] Toggle button to enable/disable real-time updates
+- [x] Visual indicator (green = enabled, gray = disabled)
+- [x] 5-second reconnection with exponential backoff
 
 **Technical Implementation:**
 - Backend: WebSocket with STOMP protocol
 - Transport: SockJS for compatibility
 - Topic: `/topic/qsos`
 - Frontend: `WebSocketService` integration
-- Reconnection: 5-second delay with exponential backoff
 
 ---
 
@@ -317,6 +285,8 @@ As a radio operator, I need advanced mapping capabilities to visualize my contac
 
 ### Epic Description
 As a radio operator, I need powerful filtering capabilities to find specific contacts and analyze subsets of my log data.
+
+**Status: Complete**
 
 ### User Stories
 
@@ -326,26 +296,24 @@ As a radio operator, I need powerful filtering capabilities to find specific con
 **So that** I can focus on specific subsets of contacts
 
 **Acceptance Criteria:**
--  Filter by Band (160M, 80M, 40M, 20M, 15M, 10M, 6M, 2M, 70CM)
--  Filter by Mode (SSB, CW, FT8, FT4, RTTY, PSK31, FM, AM)
--  Filter by Station (1-6)
--  Filter by Operator (text search)
--  Filter by DXCC Entity (country name or prefix)
--  Filter by Continent (NA, SA, EU, AF, AS, OC)
--  Filter by State/Province (text input)
--  Filter by Exchange (contest data)
--  Filter by Date Range (from/to dates)
--  Filter by Confirmation Status (confirmed/unconfirmed/all)
--  Active filter pills showing current selections
--  Remove individual filters with X button
--  Clear all filters button
--  Apply filters button
+- [x] Filter by Band (160M, 80M, 40M, 20M, 15M, 10M, 6M, 2M, 70CM)
+- [x] Filter by Mode (SSB, CW, FT8, FT4, RTTY, PSK31, FM, AM)
+- [x] Filter by Station (1-10 + GOTA)
+- [x] Filter by Operator (text search)
+- [x] Filter by DXCC Entity (country name or prefix)
+- [x] Filter by Continent (NA, SA, EU, AF, AS, OC)
+- [x] Filter by State/Province (text input)
+- [x] Filter by Exchange (contest data)
+- [x] Filter by Date Range (from/to dates)
+- [x] Filter by Confirmation Status (confirmed/unconfirmed/all)
+- [x] Active filter pills showing current selections with individual removal
+- [x] Clear all filters button
+- [x] `FullscreenMapViewComponent` wires filter changes to `QSOMapComponent.applyFilters()`
 
 **Technical Implementation:**
-- Component: `MapFilterPanelComponent` (176 LOC)
+- Component: `MapFilterPanelComponent`
 - Interface: `MapFilters` with 10 optional fields
-- Query params: Converted to backend API parameters
-- Server-side filtering in `MapDataService`
+- Server-side filtering in `MapDataService.getFilteredQSOs()` (public method)
 
 ---
 
@@ -355,21 +323,18 @@ As a radio operator, I need powerful filtering capabilities to find specific con
 **So that** I can use the full system on any device
 
 **Acceptance Criteria:**
--  Bottom sheet UI on mobile (<768px)
--  Fixed position at bottom of screen
--  Swipe handle indicator
--  Touch gesture support (swipe up/down)
--  Collapsed state (60px visible - header only)
--  Expanded state (80vh max height)
--  Auto-scrolling when content overflows
--  Smooth CSS transitions
--  Desktop: standard panel above map
+- [x] Bottom sheet UI on mobile (<768px)
+- [x] Fixed position at bottom of screen with swipe handle indicator
+- [x] Touch gesture support (swipe up/down, 50px minimum distance)
+- [x] Collapsed state (60px visible — header only)
+- [x] Expanded state (80vh max height, scrollable)
+- [x] Smooth CSS transitions
+- [x] Desktop: standard panel above map
 
 **Technical Implementation:**
 - CSS media queries at 768px breakpoint
 - Touch events: `touchstart` and `touchend`
 - Transform: `translateY()` for sliding effect
-- Swipe detection: 50px minimum distance
 
 ---
 
@@ -377,6 +342,8 @@ As a radio operator, I need powerful filtering capabilities to find specific con
 
 ### Epic Description
 As a radio operator tracking DXCC awards, I need comprehensive country prefix management and lookup capabilities.
+
+**Status: Complete**
 
 ### User Stories
 
@@ -386,24 +353,22 @@ As a radio operator tracking DXCC awards, I need comprehensive country prefix ma
 **So that** I can track my DXCC entity progress
 
 **Acceptance Criteria:**
--  Load CTY.DAT file (standard amateur radio country file)
--  Parse 340+ DXCC entities
--  Support primary and alternate prefixes
--  Exact match support (=W1AW format)
--  Longest-match algorithm for prefix lookup
--  Cache lookups for performance
--  Load default file or custom upload
--  API endpoints for lookup and management
+- [x] Load CTY.DAT file (standard amateur radio country file)
+- [x] Parse 340+ DXCC entities
+- [x] Support primary and alternate prefixes
+- [x] Exact match support (`=W1AW` format)
+- [x] Longest-match algorithm for prefix lookup
+- [x] Cache lookups for performance (`@Cacheable`)
+- [x] Load default file or custom upload
 
 **Technical Implementation:**
 - Service: `DXCCLoaderService` with regex parser
-- Service: `DXCCLookupService` with caching (@Cacheable)
+- Service: `DXCCLookupService` with caching
 - Entity: `DXCCPrefix` with JPA
-- Parser: Regex pattern for country line parsing
 - Batch saving: 1000 prefixes per batch
 - API Endpoints:
-  - `POST /api/dxcc/load` (upload custom)
-  - `POST /api/dxcc/load-default` (load from classpath)
+  - `POST /api/dxcc/load`
+  - `POST /api/dxcc/load-default`
   - `GET /api/dxcc/lookup/{callsign}`
   - `GET /api/dxcc/status`
 
@@ -412,54 +377,59 @@ As a radio operator tracking DXCC awards, I need comprehensive country prefix ma
 ## Epic 5: Session & Location Management
 
 ### Epic Description
-As a radio operator, I need flexible location management for different operating scenarios.
+As a radio operator, I need flexible location management for different operating scenarios including portable, home, and field day operations.
+
+**Status: Complete**
 
 ### User Stories
 
 #### US-5.1: Hierarchical Location Fallback
 **As a** radio operator
-**I want** the system to intelligently determine my location
-**So that** QSO locations are accurate without manual entry
+**I want** the system to intelligently determine my operating location
+**So that** QSO locations are accurate without manual entry for every contact
 
 **Location Priority:**
 1. Station configuration (highest priority)
-2. User profile location
+2. User profile default location
 3. Session temporary location
 4. Manual QSO-level entry (lowest priority)
 
 **Acceptance Criteria:**
--  Station-level location in station configuration
--  User-level location in user profile
--  Session temporary location with TTL
--  QSO-level manual override
--  Automatic Maidenhead grid calculation
--  Geocoding from QTH/address (future)
+- [x] Station-level location in station configuration
+- [x] User-level location in user profile (`defaultLatitude` / `defaultLongitude`)
+- [x] Session temporary location with 1-hour TTL
+- [x] QSO-level manual override
+- [x] Automatic Maidenhead grid calculation from coordinates
+- [x] `MapDataService.getOperatorLocation()` resolves user default location via `userRepository.findByCallsign()`
+- [x] `LocationManagementService.updateUserLocation(String username, ...)` overload added
 
 **Technical Implementation:**
 - Service: `LocationManagementService` with fallback logic
 - Service: `SessionLocationService` with in-memory cache
 - TTL: 1 hour (3600 seconds)
 - Storage: `ConcurrentHashMap` for thread safety
+- `MapController.setUserLocation()` uses `Authentication` parameter (not hardcoded user ID)
 
 ---
 
 #### US-5.2: Session Location Override
 **As a** portable operator
 **I want to** temporarily set my location for a session
-**So that** I don't need to change my permanent station location
+**So that** I do not need to change my permanent station location
 
 **Acceptance Criteria:**
--  Set session location with lat/lon or grid
--  1-hour automatic expiration
--  Clear session location manually
--  View current session location
--  In-memory storage (no database persistence)
--  Thread-safe implementation
+- [x] Set session location with lat/lon or grid square
+- [x] 1-hour automatic expiration
+- [x] Clear session location manually
+- [x] View current session location
+- [x] In-memory storage (no database persistence required)
+- [x] Thread-safe implementation
 
 **API Endpoints:**
 - `POST /api/maps/session-location/{logId}`
 - `GET /api/maps/session-location/{logId}`
 - `DELETE /api/maps/session-location/{logId}`
+- `PUT /api/maps/location/user`
 
 ---
 
@@ -468,47 +438,42 @@ As a radio operator, I need flexible location management for different operating
 ### Epic Description
 As a user, I need an intuitive, visually appealing interface that works across all devices.
 
+**Status: Complete**
+
 ### User Stories
 
-#### US-6.1: EtherWave Theme
+#### US-6.1: EtherWave Archive Branding and Theme
 **As a** user
-**I want** a modern, sci-fi themed interface
+**I want** a modern, signal-analysis themed interface
 **So that** the application feels professional and unique
 
 **Design Elements:**
--  Gradient colors: #0080ff → #00d4ff (blue to cyan)
--  Signal analysis aesthetic
--  Glassmorphism effects on panels
--  Smooth animations and transitions
--  Dark/light theme support
--  Custom icons and badges
--  Rounded corners and shadows
-
-**Technical Implementation:**
-- CSS: Linear gradients on primary elements
-- CSS: `backdrop-filter: blur()` for glassmorphism
-- CSS: Transition animations (0.2-0.3s ease)
-- Bootstrap 5.3.8 base with custom overrides
+- [x] Gradient colors: #0080ff to #00d4ff (blue to cyan)
+- [x] Signal analysis / sci-fi aesthetic
+- [x] Glassmorphism effects on panels (`backdrop-filter: blur()`)
+- [x] Smooth animations and transitions (0.2-0.3s ease)
+- [x] Dark/light theme support with CartoDB tile switching
+- [x] Bootstrap 5.3.x base with custom overrides
 
 ---
 
-#### US-6.2: Responsive Design
+#### US-6.2: Fully Responsive Design
 **As a** user on any device
 **I want** the interface to adapt to my screen size
 **So that** I can use all features on desktop, tablet, or mobile
 
 **Breakpoints:**
-- Desktop: ≥769px (full layout)
+- Desktop: >= 769px (full layout)
 - Tablet: 576-768px (adjusted layout)
-- Mobile: ≤575px (stacked layout + bottom sheet)
+- Mobile: <= 575px (stacked layout, bottom-sheet filter panel)
 
-**Responsive Features:**
--  Mobile bottom sheet for filters
--  Stacked form fields on mobile
--  Touch-optimized controls
--  Collapsible sections
--  Responsive map sizing
--  Mobile-friendly buttons and inputs
+**Acceptance Criteria:**
+- [x] Mobile bottom sheet for map filters
+- [x] Touch-optimized controls with swipe gesture support
+- [x] Responsive map sizing
+- [x] Stacked form fields on mobile
+- [x] Collapsible sections
+- [x] Mobile-friendly buttons and inputs
 
 ---
 
@@ -517,31 +482,26 @@ As a user, I need an intuitive, visually appealing interface that works across a
 ### Epic Description
 As a system administrator, I need the application to perform efficiently under load with large datasets.
 
+**Status: Complete**
+
 ### User Stories
 
-#### US-7.1: Server-Side Clustering
+#### US-7.1: Server-Side Adaptive Clustering
 **As a** radio operator with 10,000+ QSOs
 **I want** the map to remain responsive
 **So that** I can visualize my entire log without performance issues
 
 **Acceptance Criteria:**
--  Automatic clustering when zoom < threshold
--  Cluster threshold: 10,000 QSOs
--  Haversine distance calculation for grouping
--  Zoom-dependent pixel radius (e.g., 100px at zoom 4)
--  Station breakdown in cluster metadata
--  Band breakdown in cluster metadata
--  Click cluster to zoom to bounds
+- [x] Automatic clustering activates above 10,000 QSO threshold
+- [x] Haversine distance calculation for grouping
+- [x] Zoom-dependent pixel radius
+- [x] Station and band breakdown in cluster metadata
+- [x] Click cluster to zoom to bounds
 
 **Performance Targets:**
 - Load time: <2 seconds for 10k QSOs
 - Cluster calculation: <500ms
 - Map render: <1 second
-
-**Technical Implementation:**
-- Algorithm: Grid-based clustering with Haversine
-- Pixel radius calculation: `100 * (zoom / 4)`
-- Response size: <500KB for 10k clustered
 
 ---
 
@@ -551,45 +511,496 @@ As a system administrator, I need the application to perform efficiently under l
 **So that** response times are minimized
 
 **Caching Layers:**
--  Spring Cache for DXCC lookups
--  In-memory session locations (1-hour TTL)
--  Browser caching for tile layers
--  Database query result caching
+- [x] Spring Cache for DXCC lookups (`@Cacheable`)
+- [x] In-memory session locations (1-hour TTL via `ConcurrentHashMap`)
+- [x] Browser caching for tile layers (CartoDB CDN)
+
+---
+
+## Epic 8: Authentication & Security
+
+### Epic Description
+As a system operator, I need secure multi-user authentication to protect log data and enforce access boundaries.
+
+**Status: Complete**
+
+### User Stories
+
+#### US-8.1: JWT-Based Authentication
+**As a** user
+**I want** to log in securely and stay logged in
+**So that** my session is persistent and my data is protected
+
+**Acceptance Criteria:**
+- [x] JWT tokens issued on successful login
+- [x] 24-hour token expiry
+- [x] Bearer token authentication on all protected endpoints
+- [x] Token validation middleware applied system-wide
+
+---
+
+#### US-8.2: User Registration (Username-Only)
+**As a** new user
+**I want to** register with a username and password
+**So that** I can access the system without providing an email address
+
+**Acceptance Criteria:**
+- [x] Registration requires username + password only
+- [x] Optional callsign field at registration
+- [x] No email field anywhere in the auth system (removed entirely)
+- [x] Username uniqueness enforced
+- [x] `RegisterRequest` DTO has no email field
+- [x] `User` entity has no email column
 
 **Technical Implementation:**
-- `@Cacheable` annotations on service methods
-- `ConcurrentHashMap` for session data
-- HTTP cache headers for static resources
+- Entity: `User` — no email field
+- DTO: `LoginRequest` — `username` field only (not usernameOrEmail)
+- DTO: `RegisterRequest` — no email field
+- Repository: `UserRepository` — no email query methods
+- Frontend model: `user.model.ts` — no email in `User`, `RegisterRequest`, or `AuthResponse`
+
+---
+
+#### US-8.3: BCrypt Password Hashing
+**As a** security-conscious operator
+**I want** passwords stored securely
+**So that** credentials are protected even if the database is compromised
+
+**Acceptance Criteria:**
+- [x] BCrypt hashing applied to all passwords at registration
+- [x] Passwords never stored or transmitted in plaintext
+- [x] Spring Security BCryptPasswordEncoder used
+
+---
+
+#### US-8.4: Admin User Bootstrap
+**As a** system administrator
+**I want to** configure the initial admin account via environment variables
+**So that** the first admin user does not require a separate setup step
+
+**Acceptance Criteria:**
+- [x] `ADMIN_USERNAME` and `ADMIN_PASSWORD` environment variables respected
+- [x] Admin user created on first startup if not present
+- [x] No `ADMIN_EMAIL` variable (email removed from system)
+
+---
+
+#### US-8.5: Frontend Route Guards
+**As a** system designer
+**I want** all authenticated pages protected by route guards
+**So that** unauthenticated users are redirected to login
+
+**Acceptance Criteria:**
+- [x] Angular route guards on all authenticated pages
+- [x] Redirect to `/login` on guard failure
+- [x] JWT stored and attached to all outgoing API requests via interceptor
+
+---
+
+## Epic 9: Multi-User Collaboration
+
+### Epic Description
+As a club or field day operator, I need to invite other users to shared logs, assign them to stations, and manage their roles and permissions within a log.
+
+**Status: Complete**
+
+### User Stories
+
+#### US-9.1: Role-Based Access Control
+**As a** log creator
+**I want** to control what other users can do in my log
+**So that** participants have appropriate access without risking data integrity
+
+**Roles:**
+- **CREATOR**: Full control — edit log settings, invite/remove participants, add/edit/delete QSOs
+- **STATION**: Operator — add and edit QSOs, view all log data
+- **VIEWER**: Read-only — view log and QSOs, no modifications
+
+**Acceptance Criteria:**
+- [x] `userRole` field returned on `LogResponse` (CREATOR / STATION / VIEWER)
+- [x] All permission checks in backend enforce role boundaries
+- [x] `permissions.service.ts` uses `log.userRole` for frontend RBAC
+- [x] `isCreator` checks both `log.creatorId` and `log.userRole === CREATOR`
+- [x] `isOperator` checks `log.userRole === STATION`
+
+---
+
+#### US-9.2: Invitation System
+**As a** log creator
+**I want to** invite other users to join my log
+**So that** they can participate in a shared operation
+
+**Acceptance Criteria:**
+- [x] Send invitations by username or callsign (no email required)
+- [x] `InvitationService` supports lookup by username or callsign
+- [x] Invited user notified via in-app invitations list
+- [x] Invitations panel available in the frontend (`invitations.component.ts`)
+
+---
+
+#### US-9.3: Invitation Lifecycle
+**As an** invited user
+**I want to** accept or decline invitations
+**So that** I control which logs I participate in
+
+**Invitation States:**
+- PENDING: Invitation sent, awaiting response
+- ACCEPTED: User joined the log
+- DECLINED: User declined the invitation
+- CANCELLED: Invitation withdrawn by creator
+- EXPIRED: Invitation exceeded validity period
+
+**Acceptance Criteria:**
+- [x] All five states implemented and enforced
+- [x] Creators can cancel pending invitations
+- [x] Expired invitations removed from active display
+
+---
+
+#### US-9.4: Participant Management
+**As a** log creator
+**I want to** view and manage participants in my log
+**So that** I can maintain operational control during an event
+
+**Acceptance Criteria:**
+- [x] View all participants with their roles and assigned stations
+- [x] Remove participants from a log
+- [x] Participant list visible to CREATOR only for management actions
+
+---
+
+#### US-9.5: Station Assignment
+**As a** log creator
+**I want to** assign participants to numbered stations
+**So that** QSOs are correctly attributed to the right station in multi-transmitter events
+
+**Acceptance Criteria:**
+- [x] Station numbers 1-10 supported
+- [x] GOTA (Get On The Air) station designation supported
+- [x] Station assignment shown as color-coded badge in participant list
+- [x] Station color preferences displayed (localStorage-backed)
+
+---
+
+#### US-9.6: Personal-to-Shared Conversion
+**As a** log creator
+**I want to** convert a personal log to a shared log
+**So that** I can invite others to a log I originally created for myself
+
+**Acceptance Criteria:**
+- [x] One-way PERSONAL to SHARED conversion endpoint
+- [x] Conversion cannot be reversed
+- [x] Personal logs reject invitations with HTTP 400 before conversion
+- [x] Frontend exposes conversion action for CREATOR only
+
+---
+
+## Epic 10: Contest Validation & Scoring
+
+### Epic Description
+As a contest operator, I need real-time exchange validation, duplicate detection, and scoring so that I can compete accurately without post-event cleanup.
+
+**Status: Complete**
+
+### User Stories
+
+#### US-10.1: Plugin-Based Contest Validator Architecture
+**As a** developer
+**I want** a standardized interface for contest validators
+**So that** new contest types can be added without modifying core logic
+
+**Acceptance Criteria:**
+- [x] `ContestValidator` interface defined
+- [x] Validators registered by contest code string
+- [x] Contest config JSONs loaded from `backend/src/main/resources/contest-configs/`
+- [x] All 7 validators implement the interface
+
+---
+
+#### US-10.2: Contest Validators (7 Implemented)
+**As a** contest operator
+**I want** automated exchange validation for the contests I operate
+**So that** invalid contacts are flagged before submission
+
+| Validator | Contest Code | Tests |
+|-----------|-------------|-------|
+| FieldDayValidator | `ARRL-FD` | 76 |
+| POTAValidator | `POTA` | 14 |
+| SOTAValidator | `SOTA` | 13 |
+| WinterFieldDayValidator | `WFD` | 16 |
+| CQWWValidator | `CQWW` | 30 |
+| ARRLSweepstakesValidator | `ARRL-SS` | 42 |
+| StateQSOPartyValidator | `STATE-QSO-PARTY` | 27 |
+
+**Acceptance Criteria:**
+- [x] Each validator enforces exchange field requirements for its contest
+- [x] CQWW: CQ zone 1-40 required in exchange
+- [x] ARRL Sweepstakes: serial number, precedence (Q/A/B/M/S/U), check, ARRL section required
+- [x] State QSO Party: serial number and state required in exchange
+- [x] All 218 validator-level tests passing
+
+**Contest Config Files:**
+- `backend/src/main/resources/contest-configs/arrl-sweepstakes.json`
+- `backend/src/main/resources/contest-configs/cqww.json`
+- `backend/src/main/resources/contest-configs/sota.json`
+- `backend/src/main/resources/contest-configs/state-qso-party.json`
+- (and field-day, pota, wfd configs)
+
+---
+
+#### US-10.3: Real-Time Scoring
+**As a** contest operator
+**I want to** see my score update as I log contacts
+**So that** I know my standing during the contest
+
+**Acceptance Criteria:**
+- [x] `ScoringService` calculates QSO points and multipliers in real-time
+- [x] `MultiplierTrackingService` tracks worked multipliers
+- [x] Score broadcast via WebSocket on each new QSO
+- [x] Score summary visible in frontend score-summary component
+
+---
+
+#### US-10.4: Bonus Point Tracking
+**As a** contest operator
+**I want** bonus points (e.g., club bonus, natural power bonus) tracked automatically
+**So that** my final score is accurate without manual calculation
+
+**Acceptance Criteria:**
+- [x] `Log.bonusMetadata` TEXT column stores JSON map (bonus key to count/flag integer)
+- [x] `ScoringService.calculateBonusPoints()` reads `bonus_points` from contest config JSON
+- [x] `LogResponse.bonusMetadata` exposed to frontend
+- [x] `LogRequest.bonusMetadata` accepted in log update
+- [x] Frontend `Log` model and `LogRequest` interface include `bonusMetadata?: string`
+
+---
+
+#### US-10.5: Duplicate QSO Detection
+**As a** contest operator
+**I want** the system to flag duplicate contacts
+**So that** I do not waste time on contacts that will not count
+
+**Acceptance Criteria:**
+- [x] `DuplicateDetectionService` implemented
+- [x] Duplicate check considers callsign, band, and mode
+- [x] Duplicates flagged in real-time at QSO entry
+
+---
+
+#### US-10.6: Score Summary Dashboard
+**As a** contest operator
+**I want** a dedicated score summary view
+**So that** I can monitor my progress throughout the event
+
+**Acceptance Criteria:**
+- [x] Frontend `score-summary` component displays current totals
+- [x] Shows QSO count, multipliers, bonus points, and final score
+- [x] Updates in real-time as QSOs are logged
+
+---
+
+## Epic 11: Rig Control Integration
+
+### Epic Description
+As an active operator, I need the logging system to communicate with my radio hardware so that frequency, mode, and other rig data are auto-populated into the QSO form.
+
+**Status: Complete**
+
+### User Stories
+
+#### US-11.1: Hamlib/rigctld TCP Integration
+**As a** radio operator
+**I want** the backend to connect to my radio via Hamlib
+**So that** rig data is available system-wide without browser plugins
+
+**Acceptance Criteria:**
+- [x] `RigControlClient` connects to `rigctld` TCP socket
+- [x] Configurable host and port per user/station
+- [x] Connection errors handled gracefully with reconnect
+
+---
+
+#### US-11.2: Real-Time Frequency/Mode Polling and WebSocket Broadcast
+**As a** radio operator
+**I want** the current frequency and mode polled continuously and pushed to my browser
+**So that** I see live rig data without manual input
+
+**Acceptance Criteria:**
+- [x] Frequency and mode polled on configurable interval
+- [x] Data broadcast over WebSocket to subscribed clients
+- [x] Frontend updates in real-time
+
+---
+
+#### US-11.3: Rig Status Panel
+**As a** radio operator
+**I want** a persistent rig status display in the UI
+**So that** I always know the current frequency and mode
+
+**Acceptance Criteria:**
+- [x] `rig-status` component displays frequency, mode, and connection state
+- [x] Visual indicator for connected/disconnected state
+- [x] Updates without page refresh
+
+---
+
+#### US-11.4: Auto-Population of QSO Form
+**As a** radio operator entering a contact
+**I want** the frequency and mode fields pre-filled from the rig
+**So that** I only need to enter the callsign and signal report
+
+**Acceptance Criteria:**
+- [x] QSO form populates band and mode fields from current rig state on form open
+- [x] User can override auto-populated values manually
+- [x] Works whether rig is connected or not (graceful fallback to manual)
+
+---
+
+#### US-11.5: Per-User Rig Control Docker Containers
+**As a** system administrator running multi-operator events
+**I want** rig control isolated per user
+**So that** each operator's rig configuration does not interfere with others
+
+**Acceptance Criteria:**
+- [x] Rig control containers provisioned per user in Docker Compose
+- [x] Each container runs `rigctld` for one station
+- [x] Configuration via environment variables
+
+---
+
+## Epic 12: Log Type Separation — Personal vs Shared
+
+### Epic Description
+As a radio operator, I need a clear separation between personal logs (private, single-operator) and shared logs (collaborative, multi-operator) so that the system enforces appropriate rules for each type.
+
+**Status: Complete**
+
+### User Stories
+
+#### US-12.1: LogType Enum at Backend
+**As a** system designer
+**I want** log type enforced at the data layer
+**So that** personal and shared log rules cannot be bypassed via the API
+
+**Acceptance Criteria:**
+- [x] `LogType` enum (PERSONAL / SHARED) present on `Log` entity
+- [x] Type enforced in all log service operations
+- [x] Type returned in `LogResponse`
+
+---
+
+#### US-12.2: Personal Log Privacy Enforcement
+**As a** personal log owner
+**I want** my personal log to always be private
+**So that** other users cannot see or join it
+
+**Acceptance Criteria:**
+- [x] `isPublic` forced to `false` for PERSONAL logs regardless of request body
+- [x] Invitation attempts on PERSONAL logs rejected with HTTP 400
+- [x] No STATION or VIEWER roles possible on a PERSONAL log
+
+---
+
+#### US-12.3: Separate Create Buttons
+**As a** user
+**I want** distinct creation flows for personal and shared logs
+**So that** I clearly understand what I am creating
+
+**Acceptance Criteria:**
+- [x] Log selector presents two buttons: "New Personal Log" and "New Shared Log"
+- [x] Each button opens a correctly pre-typed creation modal
+
+---
+
+#### US-12.4: Log List Split Into Labeled Sections
+**As a** user with both personal and shared logs
+**I want** my logs grouped by type in the selector
+**So that** I can quickly find the log I need
+
+**Acceptance Criteria:**
+- [x] Log selector displays "My Personal Logs" section and "Shared Logs" section
+- [x] Each section only shows logs of the correct type
+
+---
+
+#### US-12.5: Adaptive Modal Title and Fields
+**As a** user
+**I want** the log create/edit modal to adapt based on log type
+**So that** irrelevant fields are not shown
+
+**Acceptance Criteria:**
+- [x] Modal title reflects log type ("New Personal Log" / "New Shared Log")
+- [x] `isPublic` field hidden for PERSONAL logs
+
+---
+
+#### US-12.6: One-Way Personal-to-Shared Conversion
+**As a** log creator
+**I want to** promote a personal log to a shared log
+**So that** I can open it for collaboration after the fact
+
+**Acceptance Criteria:**
+- [x] `POST /api/logs/{logId}/convert-to-shared` endpoint available
+- [x] Conversion is permanent and cannot be reversed
+- [x] Converted log accepts invitations and has SHARED rules applied immediately
+- [x] Frontend exposes conversion only to CREATOR role
 
 ---
 
 ## Technical Architecture
 
 ### Backend Stack
-- **Framework:** Spring Boot 4.0.0
-- **Language:** Java 25
-- **Database:** PostgreSQL (primary) / SQLite (dev)
-- **ORM:** Spring Data JPA / Hibernate
+- **Framework:** Spring Boot 4.0.3
+- **Language:** Java 25 LTS
+- **Annotations:** Lombok 1.18.42 (suppressed via `MAVEN_OPTS=--sun-misc-unsafe-memory-access=allow`)
+- **Database:** PostgreSQL 16 (production) / SQLite 3.49.1.0 (field/dev)
+- **ORM:** Spring Data JPA / Hibernate 7.x
+- **Auth:** Spring Security + JWT (24-hour token expiry, BCrypt passwords)
 - **WebSocket:** STOMP over SockJS
 - **Caching:** Spring Cache
-- **Build Tool:** Maven
+- **Build:** Maven 3.9 (`maven:3.9-eclipse-temurin-25-alpine`)
+- **Runtime Image:** `eclipse-temurin:25-jre-noble` (Ubuntu Noble — no Alpine JRE for Java 25)
+- **Tests:** 230 unit and integration tests (100% passing)
+  - Test DB: H2 in-memory (`spring.sql.init.mode=never`, Hibernate DDL manages schema)
+  - Testcontainers: 1.21.3
+  - REST Assured: 5.5.2
 
 ### Frontend Stack
-- **Framework:** Angular 21.0.1
-- **Language:** TypeScript 5.9
-- **Mapping:** Leaflet 1.9.4 + leaflet.heat
-- **UI Library:** Bootstrap 5.3.8
+- **Framework:** Angular 21.2.0 (standalone components)
+- **Language:** TypeScript 5.9.3
+- **Node:** 22-alpine (build), nginx:stable-alpine (runtime)
+- **Mapping:** Leaflet 1.9.4 + leaflet.heat plugin
+- **UI Library:** Bootstrap 5.3.x
 - **Icons:** Bootstrap Icons
-- **HTTP:** RxJS Observables
-- **WebSocket:** @stomp/stompjs + sockjs-client
+- **HTTP:** RxJS Observables + Angular HttpClient
+- **WebSocket:** `@stomp/stompjs` + `sockjs-client`
+
+### Docker Setup
+- **Compose plugin:** `docker compose` v5.1.0 (use `docker compose`, not `docker-compose`)
+- **Prod compose:** `docker-compose.yml` — PostgreSQL, memory limits, 90-second `start_period` for backend
+- **Field compose:** `docker-compose.field.yml` — SQLite, simpler setup
+- **DDL_AUTO:** `update` in both compose files — allows schema evolution without migrations
+- **Healthcheck:** `curl -sf http://localhost:8080/actuator/health`
+- **Entrypoint:** `backend/docker-entrypoint.sh` — detects root, chowns `/app/data`, drops to `appuser` via `gosu`
+- **JVM flags:** `-XX:+UseContainerSupport -XX:MaxRAMPercentage=75.0 -XX:+ExitOnOutOfMemoryError`
 
 ### API Architecture
-- **Style:** RESTful
-- **Format:** JSON
-- **Authentication:** (To be implemented)
-- **Endpoints:** 19+ REST + WebSocket topics
+- **Style:** RESTful JSON
+- **Authentication:** JWT Bearer token
+- **Endpoints:** 30+ REST endpoints + WebSocket topics
+- **Schema:** DDL_AUTO=update (JPA manages schema evolution)
 
-### Key Endpoints
+### Key API Endpoints
+
+#### Log Endpoints
+```
+GET    /api/logs                            # List logs for authenticated user
+POST   /api/logs                            # Create log
+GET    /api/logs/{logId}                    # Get log
+PUT    /api/logs/{logId}                    # Update log
+DELETE /api/logs/{logId}                    # Soft-delete log
+POST   /api/logs/{logId}/convert-to-shared  # Convert personal to shared (one-way)
+```
 
 #### Map Endpoints
 ```
@@ -604,148 +1015,176 @@ POST   /api/maps/export/{logId}                  # Export map data
 POST   /api/maps/session-location/{logId}        # Set session location
 GET    /api/maps/session-location/{logId}        # Get session location
 DELETE /api/maps/session-location/{logId}        # Clear session location
+PUT    /api/maps/location/user                   # Update user default location
 GET    /api/maps/statistics/{logId}              # Map statistics
 ```
 
 #### DXCC Endpoints
 ```
-POST   /api/dxcc/load              # Upload CTY.DAT
-POST   /api/dxcc/load-default      # Load default CTY.DAT
-GET    /api/dxcc/status            # Check if loaded
-GET    /api/dxcc/lookup/{callsign} # Lookup DXCC by callsign
-GET    /api/dxcc/code/{code}       # Get DXCC by code
-GET    /api/dxcc/continent/{code}  # Get entities by continent
-GET    /api/dxcc/location/{call}   # Get location by callsign
+POST   /api/dxcc/load              # Upload custom CTY.DAT
+POST   /api/dxcc/load-default      # Load default CTY.DAT from classpath
+GET    /api/dxcc/status            # Check loaded status
+GET    /api/dxcc/lookup/{callsign} # Lookup DXCC entity by callsign
+```
+
+#### Auth Endpoints
+```
+POST   /api/auth/register          # Register new user
+POST   /api/auth/login             # Authenticate and receive JWT
+```
+
+#### Invitation Endpoints
+```
+POST   /api/invitations            # Send invitation (by username or callsign)
+GET    /api/invitations/incoming   # List incoming invitations for current user
+PUT    /api/invitations/{id}/accept
+PUT    /api/invitations/{id}/decline
+PUT    /api/invitations/{id}/cancel
 ```
 
 #### WebSocket Topics
 ```
-/topic/qsos           # New QSO notifications
-/topic/telemetry/*    # Telemetry updates (all stations)
-/topic/telemetry/{id} # Station-specific telemetry
+/topic/qsos              # New QSO notifications (real-time map updates)
+/topic/scoring/{logId}   # Live score updates
+/topic/telemetry/*       # Rig telemetry (all stations)
+/topic/telemetry/{id}    # Station-specific rig telemetry
 ```
+
+### Callsign Lookup Services
+- **QRZ XML API:** Session-based authentication, XML parsing via `DocumentBuilder`
+- **FCC ULS JSON:** Direct HTTP lookup
+- **Config:** `qrz.api.username` / `qrz.api.password` (env: `QRZ_USERNAME` / `QRZ_PASSWORD`)
+- **Note:** `UriComponentsBuilder.fromHttpUrl()` removed in Spring 7 — URL encoding uses plain string concatenation with `URLEncoder.encode()`
 
 ---
 
 ## Definition of Done (System-Wide)
 
 ### Code Quality
--  All code follows project conventions
--  No compiler warnings or errors
--  TypeScript strict mode enabled
--  Java 25 features utilized appropriately
--  Proper error handling implemented
--  Logging configured appropriately
+- [x] All code follows project conventions
+- [x] No compiler warnings or errors
+- [x] TypeScript strict mode enabled
+- [x] Java 25 features utilized appropriately
+- [x] Proper error handling implemented
+- [x] Logging configured appropriately
 
-### Testing (Future Enhancement)
--  Unit tests for business logic
--  Integration tests for API endpoints
--  E2E tests for critical user flows
--  Performance tests for clustering algorithm
+### Testing
+- [x] Unit tests for business logic (230 backend tests, 100% passing)
+- [x] Integration tests for API endpoints (H2 in-memory test database)
+- [ ] Frontend unit tests (not yet implemented)
+- [ ] E2E tests for critical user flows (not yet implemented)
 
 ### Documentation
--  Code comments for complex logic
--  JSDoc/JavaDoc for public methods
--  README files for setup
--  This agile specification document
+- [x] Code comments for complex logic
+- [x] JavaDoc for public service methods
+- [x] README files for setup
+- [x] This agile specification document updated
 
 ### Performance
--  Map loads in <2 seconds (10k QSOs)
--  No memory leaks in long sessions
--  Clustering algorithm <500ms
--  WebSocket reconnection works
--  Mobile performance acceptable
+- [x] Map loads in <2 seconds (10k QSOs)
+- [x] Clustering algorithm <500ms
+- [x] WebSocket reconnection works
+- [x] Mobile performance acceptable
 
-### Accessibility (Future Enhancement)
--  WCAG 2.1 AA compliance
--  Keyboard navigation
--  Screen reader compatibility
--  Color contrast ratios meet standards
-
-### Security (Future Enhancement)
--  Authentication implemented
--  Authorization rules enforced
--  SQL injection prevention
--  XSS prevention
--  CSRF protection
+### Security
+- [x] JWT authentication implemented and enforced
+- [x] Role-based authorization enforced at service layer
+- [x] BCrypt password hashing
+- [x] No plaintext credentials stored
+- [x] No email addresses collected or stored
 
 ---
 
-## Future Enhancements (Product Backlog)
+## Product Backlog (Remaining Items)
 
-### High Priority
-- [ ] User authentication and authorization
-- [ ] QSO confirmation via QRZ/eQSL/LoTW
-- [ ] Award tracking (DXCC, WAS, VUCC, etc.)
-- [ ] Logbook statistics dashboard
-- [ ] Advanced search with saved filters
-- [ ] Duplicate QSO detection
-- [ ] Contact notes and annotations
+### Completed (this sprint)
+- [x] Filter preset save/load — localStorage (UI implemented); backend persistence pending (low priority)
+- [x] Award tracking — DXCC, WAS, VUCC dashboard (`AwardProgressComponent`, `AwardController`)
+- [x] LoTW confirmation sync — `LotwSyncService` + `LotwSyncController`; frontend sync form in import panel
+- [x] DX cluster spotting — `DXClusterService` polling DX Summit; `DxClusterPanelComponent`
+- [x] Propagation prediction overlays — NOAA SWPC solar data; per-band conditions panel
+- [x] Print-ready QSL card generation — `QslCardComponent` modal + print CSS
+- [x] Station color preference persistence to backend — `UserPreferencesController` + `User.stationColorPreferences`
 
-### Medium Priority
-- [ ] Contest logging mode with real-time scoring
-- [ ] CAT control for rig integration
-- [ ] Cluster spotting integration (DX Summit)
-- [ ] Propagation prediction overlays
-- [ ] Photo attachments for QSL cards
-- [ ] Print-ready QSL card generation
-- [ ] Multi-user collaboration features
+### High Priority (remaining)
+- [ ] Frontend unit tests
+- [ ] E2E tests for critical user flows
+
+### Medium Priority (remaining)
+- [ ] QSL card photo attachments (file upload per QSO)
 
 ### Low Priority
+- [ ] Offline mode with local-first sync
 - [ ] Mobile native apps (iOS/Android)
-- [ ] Offline mode with sync
 - [ ] Voice logging via speech recognition
 - [ ] AI-powered contact suggestions
-- [ ] Social features (friends, activity feed)
+- [ ] Social features (friends list, activity feed)
 - [ ] Custom map styles and themes
 - [ ] Satellite pass predictions
 
 ---
 
-## Release Notes - Version 1.0.0
+## Known Limitations
 
-### New Features
- **Complete Mapping System**
-- Interactive Leaflet maps with dark/light themes
-- Server-side adaptive clustering (10k threshold)
-- Maidenhead grid square overlay (4 precision levels)
-- Heatmap density visualization with adjustable radius
-- Pie chart cluster markers for multi-station operations
-- Pulsar animations for recent QSOs (15-minute window)
-- Contest overlays (CQ/ITU zones, ARRL sections, DXCC entities)
-- Real-time WebSocket updates for live QSO tracking
-- Export functionality (GeoJSON, KML, CSV, ADIF)
+- No LoTW / eQSL / QRZ QSO confirmation integration — confirmation fields exist in the data model but are not updated automatically
+- No award progress tracking (DXCC, WAS) — entity data is available, dashboard not implemented
+- Frontend unit tests not implemented
+- E2E tests not implemented
+- Station color preferences are not persisted server-side; localStorage fallback is fully functional
+- PITest (mutation testing) does not support Java 25 — skip or ignore PITest goals in CI
+- `MapController.java` uses `@CrossOrigin(origins = "*")` — acceptable for development; tighten for production deployment
+- `console.log` debug statements present in `websocket.service.ts`, `qso-map` component, and auth components — benign, not user-facing
 
- **Advanced Filtering**
-- 10-filter system (band, mode, station, operator, DXCC, dates, etc.)
-- Visual filter pills with individual removal
-- Apply/clear all functionality
-- Filter persistence across sessions
+---
 
- **Mobile Optimization**
-- Responsive bottom sheet for filters on mobile
-- Touch gesture support (swipe up/down)
-- Optimized layouts for tablet and phone
-- Performance maintained on mobile devices
+## Release Notes
 
- **DXCC Management**
-- CTY.DAT file loading and parsing
-- 340+ DXCC entities with prefix lookup
-- Longest-match algorithm for accuracy
-- Cached lookups for performance
+### Version 1.2.0 — March 2026
 
-### Known Limitations
-- Authentication not yet implemented (single-user mode)
-- No QSL confirmation integration
-- Limited award tracking
-- No rig control integration
-- No offline mode
+#### New in v1.2.0
+- **Log Type Separation (Epic 12):** PERSONAL and SHARED log types enforced at backend. Personal logs always private; invitations rejected. Log selector split into labeled sections with separate create buttons.
+- **Rig Control Integration (Epic 11):** Hamlib/rigctld TCP socket integration with real-time frequency/mode polling, WebSocket broadcast, frontend `rig-status` component, and QSO form auto-population. Per-user rig control Docker containers.
+- **Contest Validators — CQWW, ARRL Sweepstakes, State QSO Party (Epic 10 expansion):** Three additional validators added (CQWWValidator 30 tests, ARRLSweepstakesValidator 42 tests, StateQSOPartyValidator 27 tests). Total validator count: 7.
+- **Bonus Point Tracking:** `Log.bonusMetadata` JSON field and `ScoringService.calculateBonusPoints()` read bonus definitions from contest config JSON files.
+- **Frontend RBAC Fix:** `permissions.service.ts` now uses `log.userRole` from backend (CREATOR/STATION/VIEWER) rather than only `creatorId` comparison — invited STATION participants now have correct write permissions.
+- **Map Wiring:** `FullscreenMapViewComponent` subscribes to `LogService.currentLog$`, passes `[logId]` and `[filters]` to `<app-qso-map>`, and wires filter/overlay change handlers.
+- **Location Management:** `LocationManagementService` extended with `updateUserLocation(String username, ...)` overload. `MapController.setUserLocation()` uses `Authentication` parameter.
+- **Java 25 LTS upgrade:** Runtime image switched to `eclipse-temurin:25-jre-noble` (Ubuntu Noble). `curl` added to runtime image for healthchecks. Lombok upgraded to 1.18.42.
+- **Spring Boot 4.0.3 upgrade:** All dependencies updated to compatible versions.
 
-### System Requirements
+---
+
+### Version 1.1.0 — February 2026
+
+#### New in v1.1.0
+- **Contest Validation & Scoring (Epic 10 initial):** Plugin-based `ContestValidator` architecture. Four validators: FieldDayValidator (76 tests), POTAValidator (14 tests), SOTAValidator (13 tests), WinterFieldDayValidator (16 tests). `ScoringService`, `MultiplierTrackingService`, `DuplicateDetectionService`. Frontend `score-summary` component.
+- **Multi-User Collaboration (Epic 9):** Role-based access control (CREATOR / STATION / VIEWER). In-app invitation system (by username or callsign). Full invitation lifecycle (PENDING / ACCEPTED / DECLINED / CANCELLED / EXPIRED). Participant management and station assignment (1-10 + GOTA) with color badges. Personal-to-Shared conversion endpoint.
+- **Authentication & Security (Epic 8):** JWT-based authentication with 24-hour expiry. Username-only registration (no email). BCrypt password hashing. Admin bootstrap via `ADMIN_USERNAME` / `ADMIN_PASSWORD` environment variables. Angular route guards on all authenticated pages.
+- **Callsign Lookup:** QRZ XML API (session management, XML parsing) and FCC ULS JSON lookup implemented.
+- **Test Infrastructure:** Switched integration test database from SQLite in-memory to H2 in-memory to resolve Hibernate 7.x `ObjectOptimisticLockingFailureException`. `spring.sql.init.mode=never` in test profile; `spring.jpa.open-in-view=false` in test profile.
+
+---
+
+### Version 1.0.0 — December 2025
+
+#### Initial Release
+- **Core Logging System (Epic 1):** Multi-station log management with unlimited logs, 25+ QSO fields, real-time validation, ADIF 3.1.4 import/export, Cabrillo export.
+- **Geographic Visualization & Mapping (Epic 2):** Interactive Leaflet.js map, adaptive server-side clustering (10k threshold), Maidenhead grid overlay (4 precision levels), heatmap density visualization, multi-station SVG pie chart clusters, 15-minute pulse animations, contest overlay layers (CQ zones, ITU zones, ARRL sections, DXCC), GeoJSON/KML/CSV/ADIF export, real-time WebSocket updates.
+- **Advanced Filtering (Epic 3):** 10-filter system with visual filter pills. Mobile-responsive bottom sheet with swipe gestures.
+- **DXCC Management (Epic 4):** CTY.DAT loading and parsing, 340+ entities, longest-match algorithm, cached lookups.
+- **Session & Location Management (Epic 5):** Hierarchical location fallback (station → user → session → manual), session override with 1-hour TTL.
+- **UI & UX (Epic 6):** EtherWave Archive branding, glassmorphism theme, dark/light mode, fully responsive design.
+- **Performance (Epic 7):** Server-side adaptive clustering, Spring Cache for DXCC, in-memory session locations.
+
+---
+
+## System Requirements
+
 - **Browser:** Chrome 90+, Firefox 88+, Safari 14+, Edge 90+
 - **Screen:** 320px minimum width
 - **Network:** Broadband recommended for real-time features
-- **Server:** Java 25, PostgreSQL 13+
+- **Server:** Java 25 LTS, PostgreSQL 13+ (production) or SQLite (field)
+- **Containers:** Docker Engine 24+ with Compose plugin v5.x
 
 ---
 
@@ -755,7 +1194,9 @@ GET    /api/dxcc/location/{call}   # Get location by callsign
 1. Clone repository
 2. Backend: `mvn clean install && mvn spring-boot:run`
 3. Frontend: `npm install && npm start`
-4. Access: `http://localhost:4200`
+4. Docker (production): `docker compose up -d`
+5. Docker (field): `docker compose -f docker-compose.field.yml up -d`
+6. Access: `http://localhost:4200`
 
 ### Issue Reporting
 - Use GitHub Issues for bug reports
@@ -765,56 +1206,59 @@ GET    /api/dxcc/location/{call}   # Get location by callsign
 ### Contributing
 - Follow Angular style guide for frontend
 - Follow Spring Boot best practices for backend
-- Write tests for new features
-- Update documentation
+- Write tests for new features (minimum: service-layer unit tests)
 - Submit pull requests against `develop` branch
 
 ---
 
 ## Appendix A: Glossary
 
-**ADIF** - Amateur Data Interchange Format, standard for ham radio logs
-**ARRL** - American Radio Relay League, US ham radio organization
+**ADIF** - Amateur Data Interchange Format, standard for ham radio log interchange
+**ARRL** - American Radio Relay League, US amateur radio organization
 **Band** - Frequency range (e.g., 20M = 14.000-14.350 MHz)
-**CQ Zone** - One of 40 geographic zones for contest purposes
-**CTY.DAT** - Standard file format for DXCC entity/prefix data
-**DXCC** - DX Century Club, award for contacting 100+ entities
+**Cabrillo** - Standard log submission format for contest adjudication
+**CQ Zone** - One of 40 geographic zones used in contest scoring
+**CTY.DAT** - Standard file format for DXCC entity and prefix data
+**DXCC** - DX Century Club, award for contacting 100+ DXCC entities
+**FT8/FT4** - Digital weak-signal modes (WSJT-X)
+**GOTA** - Get On The Air — special station category in ARRL Field Day
 **Grid Square** - Maidenhead locator system coordinate
-**ITU Zone** - One of 90 zones defined by International Telecommunication Union
+**Hamlib** - Open-source rig control library; `rigctld` is its TCP daemon
+**ITU Zone** - One of 90 zones defined by the International Telecommunication Union
+**LoTW** - Logbook of the World, ARRL's QSO confirmation system
+**Maidenhead** - Geographic grid locator system used in amateur radio
 **Mode** - Transmission type (SSB, CW, FT8, etc.)
+**POTA** - Parks on the Air, award program for activating parks
 **QSO** - Radio contact between two stations
+**QSL** - Confirmation of a radio contact
 **QTH** - Station location
 **RST** - Signal report (Readability, Strength, Tone)
-**Station** - Radio equipment configuration
+**SOTA** - Summits on the Air, award program for activating mountain summits
+**Station** - Radio equipment configuration, numbered 1-10 or GOTA in this system
+**WAS** - Worked All States award
+**VUCC** - VHF/UHF Century Club, grid square award
 
 ---
 
 ## Appendix B: Statistics
 
-### Code Metrics
-- **Total Lines of Code:** ~6,300
-- **Backend LOC:** ~3,500 (Java)
-- **Frontend LOC:** ~2,800 (TypeScript/HTML/CSS)
-- **Files Created:** 22+ components/services
-- **API Endpoints:** 19 REST + 3 WebSocket topics
-- **Commits (Mapping Feature):** 10
-
 ### Feature Coverage
-- **Epics Completed:** 6 of 7 (85%)
-- **User Stories Delivered:** 26
-- **Acceptance Criteria Met:** 100% for delivered stories
-- **Test Coverage:** (To be determined)
+- **Epics Completed:** 12 of 12 (100%)
+- **User Stories Delivered:** 46
+- **Contest Validators:** 7
+- **Backend Tests:** 230 (100% passing)
+- **Frontend Tests:** 0 (not yet implemented)
+- **API Endpoints:** 30+ REST + 4 WebSocket topics
 
 ### Performance Metrics
-- **Build Time:** ~5 seconds
-- **Bundle Size:** 915 KB (compressed: 190 KB)
 - **Map Load Time:** <2 seconds (10k QSOs)
 - **Clustering Performance:** <500ms
 - **WebSocket Latency:** <100ms
+- **Bundle Size:** ~915 KB uncompressed
 
 ---
 
-**Document Version:** 1.0.0
-**Last Updated:** 2025-12-08
+**Document Version:** 1.2.0
+**Last Updated:** 2026-03-02
 **Author:** EtherWave Archive Development Team
 **Status:** Production Ready
